@@ -12,7 +12,7 @@
       </div>
       <div class="row text-right">
         <div class="column small-12 medium-8 large-6 end">
-          <input type="submit" value="Request Password" class="button"/>
+          <input type="submit" value="Reset Password" class="button"/>
         </div>
       </div>
     </form>
