@@ -1,0 +1,30 @@
+<py:extends href="wte:templates/layout/centred.kajiki">
+  <py:block name="title">Reset Password</py:block>
+  <py:block name="content">
+    <py:import href="wte:templates/helpers/form.kajiki" alias="form"/>
+    <h1>Reset Password</h1>
+    <py:if test="allow_reset">
+    <form action="${request.route_url('user.reset_password', token=request.matchdict['token'])}" method="post">
+      ${form.csrf_field()}
+      <div class="row">
+        <div class="column small-12 medium-8 large-6 end">
+          ${form.field('password', 'password', 'New Password')}
+        </div>
+      </div>
+      <div class="row">
+        <div class="column small-12 medium-8 large-6 end">
+          ${form.field('password', 'password_confirm', 'Confirm Password')}
+        </div>
+      </div>
+      <div class="row text-right">
+        <div class="column small-12 medium-8 large-6 end">
+          <input type="submit" value="Set Password" class="button"/>
+        </div>
+      </div>
+    </form>
+    </py:if><py:else>
+      <p>Unfortunately the token you have provided is not or no longer valid (tokens have a 20 minute validity period).</p>
+      <p>Please <a href="${request.route_url('user.forgotten_password')}">request a new reset token</a>.</p>
+    </py:else>
+  </py:block>
+</py:extends>
