@@ -15,6 +15,7 @@ DEV
 - *NEW*: Parts can now be labelled
 - *NEW*: Add assets directly in the part editor (#64)
 - *NEW*: Compatible with both Python 2.7 and Python 3.5
+- *NEW*: Re-worked the registration and forgotten password to use random tokens
 - *UPDATE*: Use Kajiki as the rendering engine (#49)
 - *UPDATE*: Improve caching of permission lookups (#49)
 - *UPDATE*: The :asset: directive now automatically searches in all parent parts
